// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsTab.vue fetchWorkpackages adds every work-package only once 1`] = `
<div
  id="openproject-linked-workpackages"
>
  <div
    class="existing-relations"
  >
    
			Existing relations:
		
  </div>
   
  <div
    class="linked-workpackages"
  >
    <div
      class="linked-workpackages--workpackage"
    >
      <div
        class="workpackage linked-workpackages--workpackage--item"
        id="workpackage-123"
      >
        <div
          class="row"
        >
          <div
            class="row__status"
            style="background-color: rgb(249, 150, 1); border: 0px;"
          >
            <div
              class="row__status__title"
              style="color: rgb(255, 255, 255);"
            >
              
				open
			
            </div>
          </div>
           
          <div
            class="row__workpackage"
          >
            
			#123 - a big project
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__subject"
          >
            <span
              class="row__subject__type"
            >
              
				Task
			
            </span>
            
			my task
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__assignee"
          >
            <div
              class="row__assignee__avatar"
            >
              <ncavatar-stub
                class="item-avatar"
                display-name="Bal Bahadur Pun"
                size="23"
                url="http://localhost/apps/integration_openproject/api/v1/avatar?userId=1&userName=Bal%20Bahadur%20Pun"
              />
            </div>
             
            <div
              class="row__assignee__assignee"
            >
              
				Bal Bahadur Pun
			
            </div>
          </div>
        </div>
      </div>
       
      <button
        aria-label="Unlink Work Package"
        class="button-vue button-vue--size-normal button-vue--icon-only button-vue--vue-tertiary button-vue--tertiary action-item action-item--single linked-workpackages--workpackage--unlinkactionbutton"
        data-v-29ac0caf=""
        data-v-38a26e61=""
        title="Unlink Work Package"
        type="button"
      >
        <span
          class="button-vue__wrapper"
          data-v-29ac0caf=""
        >
          <span
            aria-hidden="true"
            class="button-vue__icon"
            data-v-29ac0caf=""
          >
            <span
              aria-hidden="true"
              class="material-design-icon link-off-icon"
              data-v-29ac0caf=""
              role="img"
            >
              <svg
                class="material-design-icon__svg"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.43 19.12,14.63 17.79,15L19.25,16.44C20.88,15.61 22,13.95 22,12A5,5 0 0,0 17,7M16,11H13.81L15.81,13H16V11M2,4.27L5.11,7.38C3.29,8.12 2,9.91 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12C3.9,10.41 5.11,9.1 6.66,8.93L8.73,11H8V13H10.73L13,15.27V17H14.73L18.74,21L20,19.74L3.27,3L2,4.27Z"
                >
                  <!---->
                </path>
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
     
    <div
      class=""
    />
  </div>
</div>
`;

exports[`ProjectsTab.vue fetchWorkpackages sets the "error" state if the admin config is not okay 1`] = `
<div
  class="projects projects--empty"
>
  <!---->
   
  <div
    class="empty-content"
    id="openproject-empty-content"
  >
    <div
      class="empty-content--wrapper"
    >
      <div
        class="empty-content--icon"
      >
        <span
          aria-hidden="true"
          class="material-design-icon link-off-icon"
          role="img"
        >
          <svg
            class="material-design-icon__svg"
            fill="currentColor"
            height="60"
            viewBox="0 0 24 24"
            width="60"
          >
            <path
              d="M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.43 19.12,14.63 17.79,15L19.25,16.44C20.88,15.61 22,13.95 22,12A5,5 0 0,0 17,7M16,11H13.81L15.81,13H16V11M2,4.27L5.11,7.38C3.29,8.12 2,9.91 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12C3.9,10.41 5.11,9.1 6.66,8.93L8.73,11H8V13H10.73L13,15.27V17H14.73L18.74,21L20,19.74L3.27,3L2,4.27Z"
            >
              <!---->
            </path>
          </svg>
        </span>
      </div>
       
      <!---->
       
      <div
        class="empty-content--connect-button"
      >
        <div
          class="oauth-connect--message"
        >
          Some OpenProject Integration application settings are not working. Please contact your Nextcloud administrator.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectsTab.vue fetchWorkpackages shows the linked workpackages 1`] = `
<div
  id="openproject-linked-workpackages"
>
  <div
    class="existing-relations"
  >
    
			Existing relations:
		
  </div>
   
  <div
    class="linked-workpackages"
  >
    <div
      class="linked-workpackages--workpackage"
    >
      <div
        class="workpackage linked-workpackages--workpackage--item"
        id="workpackage-123"
      >
        <div
          class="row"
        >
          <div
            class="row__status"
            style="background-color: rgb(165, 216, 255); border: 0px;"
          >
            <div
              class="row__status__title"
              style="color: rgb(0, 0, 0);"
            >
              
				open
			
            </div>
          </div>
           
          <div
            class="row__workpackage"
          >
            
			#123 - a big project
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__subject"
          >
            <span
              class="row__subject__type"
              style="color: rgb(0, 176, 240);"
            >
              
				Task
			
            </span>
            
			my task
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__assignee"
          >
            <div
              class="row__assignee__avatar"
            >
              <ncavatar-stub
                class="item-avatar"
                display-name="Bal Bahadur Pun"
                size="23"
                url="http://localhost/apps/integration_openproject/api/v1/avatar?userId=1&userName=Bal%20Bahadur%20Pun"
              />
            </div>
             
            <div
              class="row__assignee__assignee"
            >
              
				Bal Bahadur Pun
			
            </div>
          </div>
        </div>
      </div>
       
      <button
        aria-label="Unlink Work Package"
        class="button-vue button-vue--size-normal button-vue--icon-only button-vue--vue-tertiary button-vue--tertiary action-item action-item--single linked-workpackages--workpackage--unlinkactionbutton"
        data-v-29ac0caf=""
        data-v-38a26e61=""
        title="Unlink Work Package"
        type="button"
      >
        <span
          class="button-vue__wrapper"
          data-v-29ac0caf=""
        >
          <span
            aria-hidden="true"
            class="button-vue__icon"
            data-v-29ac0caf=""
          >
            <span
              aria-hidden="true"
              class="material-design-icon link-off-icon"
              data-v-29ac0caf=""
              role="img"
            >
              <svg
                class="material-design-icon__svg"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.43 19.12,14.63 17.79,15L19.25,16.44C20.88,15.61 22,13.95 22,12A5,5 0 0,0 17,7M16,11H13.81L15.81,13H16V11M2,4.27L5.11,7.38C3.29,8.12 2,9.91 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12C3.9,10.41 5.11,9.1 6.66,8.93L8.73,11H8V13H10.73L13,15.27V17H14.73L18.74,21L20,19.74L3.27,3L2,4.27Z"
                >
                  <!---->
                </path>
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
     
    <div
      class="workpackage-seperator"
    />
  </div>
  <div
    class="linked-workpackages"
  >
    <div
      class="linked-workpackages--workpackage"
    >
      <div
        class="workpackage linked-workpackages--workpackage--item"
        id="workpackage-589"
      >
        <div
          class="row"
        >
          <div
            class="row__status"
            style="background-color: rgb(165, 216, 255); border: 0px;"
          >
            <div
              class="row__status__title"
              style="color: rgb(0, 0, 0);"
            >
              
				प्रगति हुदैछ
			
            </div>
          </div>
           
          <div
            class="row__workpackage"
          >
            
			#589 - नेपालको विकास गर्ने
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__subject"
          >
            <span
              class="row__subject__type"
              style="color: rgb(0, 176, 240);"
            >
              
				Epic
			
            </span>
            
			नेपालमा IT उद्योग बनाउने
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__assignee"
          >
            <div
              class="row__assignee__avatar"
            >
              <ncavatar-stub
                class="item-avatar"
                display-name="कुमारी नेपाली"
                size="23"
                url="http://localhost/apps/integration_openproject/api/v1/avatar?userId=13&userName=%E0%A4%95%E0%A5%81%E0%A4%AE%E0%A4%BE%E0%A4%B0%E0%A5%80%20%E0%A4%A8%E0%A5%87%E0%A4%AA%E0%A4%BE%E0%A4%B2%E0%A5%80"
              />
            </div>
             
            <div
              class="row__assignee__assignee"
            >
              
				कुमारी नेपाली
			
            </div>
          </div>
        </div>
      </div>
       
      <button
        aria-label="Unlink Work Package"
        class="button-vue button-vue--size-normal button-vue--icon-only button-vue--vue-tertiary button-vue--tertiary action-item action-item--single linked-workpackages--workpackage--unlinkactionbutton"
        data-v-29ac0caf=""
        data-v-38a26e61=""
        title="Unlink Work Package"
        type="button"
      >
        <span
          class="button-vue__wrapper"
          data-v-29ac0caf=""
        >
          <span
            aria-hidden="true"
            class="button-vue__icon"
            data-v-29ac0caf=""
          >
            <span
              aria-hidden="true"
              class="material-design-icon link-off-icon"
              data-v-29ac0caf=""
              role="img"
            >
              <svg
                class="material-design-icon__svg"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.43 19.12,14.63 17.79,15L19.25,16.44C20.88,15.61 22,13.95 22,12A5,5 0 0,0 17,7M16,11H13.81L15.81,13H16V11M2,4.27L5.11,7.38C3.29,8.12 2,9.91 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12C3.9,10.41 5.11,9.1 6.66,8.93L8.73,11H8V13H10.73L13,15.27V17H14.73L18.74,21L20,19.74L3.27,3L2,4.27Z"
                >
                  <!---->
                </path>
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
     
    <div
      class=""
    />
  </div>
</div>
`;

exports[`ProjectsTab.vue fetchWorkpackages shows the linked workpackages 2`] = `
<div
  id="openproject-linked-workpackages"
>
  <div
    class="existing-relations"
  >
    
			Existing relations:
		
  </div>
   
  <div
    class="linked-workpackages"
  >
    <div
      class="linked-workpackages--workpackage"
    >
      <div
        class="workpackage linked-workpackages--workpackage--item"
        id="workpackage-123"
      >
        <div
          class="row"
        >
          <div
            class="row__status"
            style="background-color: rgb(249, 150, 1); border: 0px;"
          >
            <div
              class="row__status__title"
              style="color: rgb(255, 255, 255);"
            >
              
				open
			
            </div>
          </div>
           
          <div
            class="row__workpackage"
          >
            
			#123 - a big project
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__subject"
          >
            <span
              class="row__subject__type"
            >
              
				Task
			
            </span>
            
			my task
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__assignee"
          >
            <div
              class="row__assignee__avatar"
            >
              <ncavatar-stub
                class="item-avatar"
                display-name="Bal Bahadur Pun"
                size="23"
                url="http://localhost/apps/integration_openproject/api/v1/avatar?userId=1&userName=Bal%20Bahadur%20Pun"
              />
            </div>
             
            <div
              class="row__assignee__assignee"
            >
              
				Bal Bahadur Pun
			
            </div>
          </div>
        </div>
      </div>
       
      <button
        aria-label="Unlink Work Package"
        class="button-vue button-vue--size-normal button-vue--icon-only button-vue--vue-tertiary button-vue--tertiary action-item action-item--single linked-workpackages--workpackage--unlinkactionbutton"
        data-v-29ac0caf=""
        data-v-38a26e61=""
        title="Unlink Work Package"
        type="button"
      >
        <span
          class="button-vue__wrapper"
          data-v-29ac0caf=""
        >
          <span
            aria-hidden="true"
            class="button-vue__icon"
            data-v-29ac0caf=""
          >
            <span
              aria-hidden="true"
              class="material-design-icon link-off-icon"
              data-v-29ac0caf=""
              role="img"
            >
              <svg
                class="material-design-icon__svg"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.43 19.12,14.63 17.79,15L19.25,16.44C20.88,15.61 22,13.95 22,12A5,5 0 0,0 17,7M16,11H13.81L15.81,13H16V11M2,4.27L5.11,7.38C3.29,8.12 2,9.91 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12C3.9,10.41 5.11,9.1 6.66,8.93L8.73,11H8V13H10.73L13,15.27V17H14.73L18.74,21L20,19.74L3.27,3L2,4.27Z"
                >
                  <!---->
                </path>
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
     
    <div
      class="workpackage-seperator"
    />
  </div>
  <div
    class="linked-workpackages"
  >
    <div
      class="linked-workpackages--workpackage"
    >
      <div
        class="workpackage linked-workpackages--workpackage--item"
        id="workpackage-589"
      >
        <div
          class="row"
        >
          <div
            class="row__status"
            style="background-color: rgb(249, 150, 1); border: 0px;"
          >
            <div
              class="row__status__title"
              style="color: rgb(255, 255, 255);"
            >
              
				प्रगति हुदैछ
			
            </div>
          </div>
           
          <div
            class="row__workpackage"
          >
            
			#589 - नेपालको विकास गर्ने
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__subject"
          >
            <span
              class="row__subject__type"
            >
              
				Epic
			
            </span>
            
			नेपालमा IT उद्योग बनाउने
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__assignee"
          >
            <div
              class="row__assignee__avatar"
            >
              <ncavatar-stub
                class="item-avatar"
                display-name="कुमारी नेपाली"
                size="23"
                url="http://localhost/apps/integration_openproject/api/v1/avatar?userId=13&userName=%E0%A4%95%E0%A5%81%E0%A4%AE%E0%A4%BE%E0%A4%B0%E0%A5%80%20%E0%A4%A8%E0%A5%87%E0%A4%AA%E0%A4%BE%E0%A4%B2%E0%A5%80"
              />
            </div>
             
            <div
              class="row__assignee__assignee"
            >
              
				कुमारी नेपाली
			
            </div>
          </div>
        </div>
      </div>
       
      <button
        aria-label="Unlink Work Package"
        class="button-vue button-vue--size-normal button-vue--icon-only button-vue--vue-tertiary button-vue--tertiary action-item action-item--single linked-workpackages--workpackage--unlinkactionbutton"
        data-v-29ac0caf=""
        data-v-38a26e61=""
        title="Unlink Work Package"
        type="button"
      >
        <span
          class="button-vue__wrapper"
          data-v-29ac0caf=""
        >
          <span
            aria-hidden="true"
            class="button-vue__icon"
            data-v-29ac0caf=""
          >
            <span
              aria-hidden="true"
              class="material-design-icon link-off-icon"
              data-v-29ac0caf=""
              role="img"
            >
              <svg
                class="material-design-icon__svg"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.43 19.12,14.63 17.79,15L19.25,16.44C20.88,15.61 22,13.95 22,12A5,5 0 0,0 17,7M16,11H13.81L15.81,13H16V11M2,4.27L5.11,7.38C3.29,8.12 2,9.91 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12C3.9,10.41 5.11,9.1 6.66,8.93L8.73,11H8V13H10.73L13,15.27V17H14.73L18.74,21L20,19.74L3.27,3L2,4.27Z"
                >
                  <!---->
                </path>
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
     
    <div
      class=""
    />
  </div>
</div>
`;

exports[`ProjectsTab.vue onSave shows the just linked workpackage 1`] = `
<div
  id="openproject-linked-workpackages"
>
  <div
    class="existing-relations"
  >
    
			Existing relations:
		
  </div>
   
  <div
    class="linked-workpackages"
  >
    <div
      class="linked-workpackages--workpackage"
    >
      <div
        class="workpackage linked-workpackages--workpackage--item workpackage-transition"
        id="workpackage-1"
      >
        <div
          class="row"
        >
          <div
            class="row__status"
            style="background-color: blue; border: 0px;"
          >
            <div
              class="row__status__title"
              style="color: rgb(255, 255, 255);"
            >
              
				in-progress
			
            </div>
          </div>
           
          <div
            class="row__workpackage"
          >
            
			 - test
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__subject"
          >
            <span
              class="row__subject__type"
              style="color: red;"
            >
              
				task
			
            </span>
            
			Organize work-packages
		
          </div>
        </div>
         
        <div
          class="row"
        >
          <div
            class="row__assignee"
          >
            <div
              class="row__assignee__avatar"
            >
              <ncavatar-stub
                class="item-avatar"
                display-name="test"
                size="23"
                url="/server/index.php/apps/integration_openproject/avatar?userId=1&userName=System"
              />
            </div>
             
            <div
              class="row__assignee__assignee"
            >
              
				test
			
            </div>
          </div>
        </div>
      </div>
       
      <button
        aria-label="Unlink Work Package"
        class="button-vue button-vue--size-normal button-vue--icon-only button-vue--vue-tertiary button-vue--tertiary action-item action-item--single linked-workpackages--workpackage--unlinkactionbutton"
        data-v-29ac0caf=""
        data-v-38a26e61=""
        title="Unlink Work Package"
        type="button"
      >
        <span
          class="button-vue__wrapper"
          data-v-29ac0caf=""
        >
          <span
            aria-hidden="true"
            class="button-vue__icon"
            data-v-29ac0caf=""
          >
            <span
              aria-hidden="true"
              class="material-design-icon link-off-icon"
              data-v-29ac0caf=""
              role="img"
            >
              <svg
                class="material-design-icon__svg"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.43 19.12,14.63 17.79,15L19.25,16.44C20.88,15.61 22,13.95 22,12A5,5 0 0,0 17,7M16,11H13.81L15.81,13H16V11M2,4.27L5.11,7.38C3.29,8.12 2,9.91 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12C3.9,10.41 5.11,9.1 6.66,8.93L8.73,11H8V13H10.73L13,15.27V17H14.73L18.74,21L20,19.74L3.27,3L2,4.27Z"
                >
                  <!---->
                </path>
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
     
    <div
      class=""
    />
  </div>
</div>
`;
